<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PruebaWS</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello</string>
    <string name="boton">Boton</string>
    <string name="distribuidor">Distribuidor</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="recordar">Recordar</string>
    <string name="entrar">Entrar</string>
    <string name="login">Entrar al Sistema</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="titulo_recarga">Recarga Electronica</string>
    <string name="telefono">Numero Telefonico</string>
    <string name="telefono2">Repetir Numero</string>
    <string name="monto">Monto de la Recarga</string>
    <string name="enviar">Realizar Recarga</string>

</resources>